--- a/PreInscripcionesAPI/Properties/launchSettings.json
+++ b/PreInscripcionesAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7285;http://localhost:5081",
+      "applicationUrl": "http://localhost:7285;http://localhost:5081",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
